tests/lean/protected.lean.expected.out
protected.lean:9:7: error: unknown identifier 'C'
D : Prop
